--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -17,7 +17,7 @@
         <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
-                    <div class="col-lg-10 col-7">
+                    <div>
                         <h6>{% if ongoingShift %} End your shift? {% else %} Start shift? {% endif %}</h6>
                         <p class="text-sm mb-0">
                             <i class="fa fa-clock text-info" aria-hidden="true"></i>
@@ -47,7 +47,7 @@
         <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
-                    <div class="col-lg-10 col-7">
+                    <div>
                         <h6>{% if showOpening %} Are you opening the store? {% else %} Are you closing the store later?
                             {% endif %}</h6>
                         <p class="text-sm mb-0">
@@ -78,7 +78,7 @@
         <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
-                    <div class="col-lg-6 col-7">
+                    <div>
                         <h6>Your Tasks</h6>
                         <p class="text-sm mb-0">
                             <i class="fa fa-check text-info" aria-hidden="true"></i>
@@ -132,7 +132,7 @@
         <div class="card">
             <div class="card-header pb-0">
                 <div class="row">
-                    <div class="col-lg-10 col-7">
+                    <div>
                         <h6>Your next shifts</h6>
                         <p class="text-sm mb-0">
                             <i class="fa fa-dumbbell text-info" aria-hidden="true"></i>
