--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -33,7 +33,8 @@
                 <span id="clock" style="font-size:2.5rem"></span>
                 {% endif %}
                 <div class="px-4" style="height: 100%; display: flex;">
-                    <a id="punchShiftButton" class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;" href="#">
+                    <a id="punchShiftButton" class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;"
+                       href="#">
                         {% if ongoingShift %} Punch out {% else %} Punch in {% endif %}
                     </a>
                 </div>
@@ -60,10 +61,12 @@
             <div class="card-body px-0 pb-2" style="text-align: center;">
                 <div class="px-4" style="height: 100%; display: flex;">
                     {% if showOpening %}
-                        <a class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;" href="/procedures/opening">
-                    {% else %}
-                        <a class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;" href="/procedures/closing">
-                    {% endif %}
+                    <a class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;"
+                       href="/procedures/opening">
+                        {% else %}
+                        <a class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;"
+                           href="/procedures/closing">
+                            {% endif %}
                             Check tasks
                         </a>
                 </div>
@@ -82,7 +85,8 @@
                         <h6>Your Tasks</h6>
                         <p class="text-sm mb-0">
                             <i class="fa fa-check text-info" aria-hidden="true"></i>
-                            <span class="font-weight-bold ms-1">30 done</span> this month <!-- todo insert correct data -->
+                            <span class="font-weight-bold ms-1">30 done</span> this month
+                            <!-- todo insert correct data -->
                         </p>
                     </div>
                 </div>
@@ -96,22 +100,30 @@
                         <tr>
                             <td>
                                 <div class="d-flex px-2 py-1">
-                                    <div class="px-4">
-                                        <i class="fa fa-list cursor-pointer" aria-hidden="true"></i>
+                                    <div class="d-flex px-4" style="align-items:center;">
+                                        <i class="fa fa-thumbtack cursor-pointer" aria-hidden="true"></i>
                                     </div>
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <h6 class="mb-0 text-sm">{{ task.title }}</h6>
+                                    <div>
+                                        <div class="d-flex px-2 py-1">
+                                            <div class="d-flex flex-column justify-content-center">
+                                                <h6 class="mb-0 text-sm">{{ task.title }}</h6>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex">
+                                            <small class="d-block text-muted text-xs opacity-7 text-secondary"
+                                                   style="margin: 0.1rem 0; padding-left: 0.5rem;">
+                                            <span data-feather="tag" class="align-text-bottom"
+                                                  style="height: 16px"></span>
+                                                {{ task.get_types|join:", " }}
+                                                {% if task.assignees %}
+                                                <span data-feather="user" class="align-text-bottom"
+                                                      style="margin-left: 0.2rem; height: 16px"></span>
+                                                {{ task.assignees }}
+                                                {% endif %}
+                                            </small>
+                                        </div>
                                     </div>
                                 </div>
-                            </td>
-                            <td class="align-middle text-sm">
-                                <small class="d-block text-muted" style="margin: 0.1rem 0;">
-                                    <i class="fa fa-tag fixed-plugin-button-nav cursor-pointer" aria-hidden="true"></i>
-                                    {{ task.get_types|join:", " }},
-                                    <i class="fa fa-group fixed-plugin-button-nav cursor-pointer"
-                                       aria-hidden="true"></i>
-                                    {{ task.assignees }}
-                                </small>
                             </td>
                         </tr>
                         {% endif %}
