change: minor wording change

--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -20,7 +20,7 @@
     <tbody>
     {% for target_branch in target_branches %}
         <tr class="title">
-          <th colspan="4">{{ target_branch }}</th>
+          <th colspan="4">Deliver to {{ target_branch }}</th>
         </tr>
         <tr class="header">
           <th scope="col" width="1%"></th>
