--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -71,9 +71,9 @@
                                 </td>
                                 <td>
                                     <div class="d-flex px-2 py-1">
-                                        <div class="mb-0 fw-bold text-sm responsive__mobile-3">
+                                        <h6 class="mb-0 text-sm responsive__mobile-3">
                                             {{ form.instance.title }}
-                                        </div>
+                                        </h6>
                                     </div>
                                     <div class="d-flex">
                                         <small class="d-block text-muted text-xs opacity-7 text-secondary"
