--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -255,7 +255,7 @@
       margin-top: -0.4rem;
     }
     ul.shifts li .shift {
-      background: #feebef;
+      background-image: linear-gradient(310deg, #cb0c9f 0%, #cb0c9f 100%);
       padding: 0.7rem 1.4rem;
       border-radius: 5px;
       display: flex;
@@ -265,10 +265,10 @@
     ul.shifts li .shift .time {
       font-size: 1rem;
       font-weight: 600;
-      color: #d35d7d;
+      color: #ffffff;
     }
     ul.shifts li .shift .location {
-      color: #8a7f82;
+      color: #efefef;
     }
 
       div.stars {
