fix: task counter in dashboard fix: color of task tag/group for darkmode

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -85,7 +85,7 @@
                         <h6>Your Tasks</h6>
                         <p class="text-sm mb-0">
                             <i class="fa fa-check text-info" aria-hidden="true"></i>
-                            <span class="font-weight-bold ms-1">30 done</span> this month
+                            <span class="font-weight-bold ms-1">{{ tasks_done_last_month }} done</span> in the last 30 days
                             <!-- todo insert correct data -->
                         </p>
                     </div>
@@ -110,7 +110,7 @@
                                             </div>
                                         </div>
                                         <div class="d-flex">
-                                            <small class="d-block text-muted text-xs opacity-7 text-secondary"
+                                            <small class="d-block text-xs opacity-7"
                                                    style="margin: 0.1rem 0; padding-left: 0.5rem;">
                                             <span data-feather="tag" class="align-text-bottom"
                                                   style="height: 16px"></span>
