change: make active sidebar item icon white add: dummy statistics to dashboard

--- a/iaroapp/static/softTheme/css/soft-ui-dashboard.css
+++ b/iaroapp/static/softTheme/css/soft-ui-dashboard.css
@@ -4,9 +4,17 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+/* CHANGED BY IARO TEAM */
 .hidden {
   display: none;
 }
+.navbar-vertical .navbar-nav > .nav-item .nav-link.active .icon {
+    color: #ffffff;
+}
+
+/* END */
+
 :root {
   --bs-blue: #63B3ED;
   --bs-indigo: #596CFF;
