--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -12,8 +12,8 @@
 </div>
 
 
-<div class="row my-4">
-    <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+<div class="row">
+    <div class="col-lg-4 mb-4">
         <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
@@ -44,7 +44,7 @@
     </div>
 
     {% if showOpening or showClosing %}
-    <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+    <div class="col-lg-4 mb-4">
         <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
@@ -76,8 +76,8 @@
     {% endif %}
 </div>
 
-<div class="row my-4">
-    <div class="col-lg-6 col-md-6 mb-md-0 mb-4">
+<div class="row">
+    <div class="col-lg-6 mb-4">
         <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
@@ -85,7 +85,8 @@
                         <h6>Your Tasks</h6>
                         <p class="text-sm mb-0">
                             <i class="fa fa-check text-info" aria-hidden="true"></i>
-                            <span class="font-weight-bold ms-1">{{ tasks_done_last_month }} done</span> in the last 30 days
+                            <span class="font-weight-bold ms-1">{{ tasks_done_last_month }} done</span> in the last 30
+                            days
                             <!-- todo insert correct data -->
                         </p>
                     </div>
@@ -140,8 +141,8 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-6 col-md-6 mb-md-0 mb-4">
-        <div class="card">
+    <div class="col-lg-6 mb-4">
+        <div class="card h-100">
             <div class="card-header pb-0">
                 <div class="row">
                     <div>
@@ -168,6 +169,57 @@
                     </li>
                     {% endfor %}
                 </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-4 mb-4">
+        <div class="card z-index-2">
+            <div class="card-header pb-0">
+                <h6>Your work hours: last 7 days</h6>
+                <p class="text-sm">
+                    <i class="fa fa-clock text-success"></i>
+                    <span class="font-weight-bold">{{ statistics_sum.workHours }}</span>h
+                </p>
+            </div>
+            <div class="card-body p-3">
+                <div class="chart">
+                    <canvas id="chart-line1" class="chart-canvas" height="300"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 mb-4">
+        <div class="card z-index-2">
+            <div class="card-header pb-0">
+                <h6>Your tasks done: last 7 days</h6>
+                <p class="text-sm">
+                    <i class="fa fa-thumbtack text-success"></i>
+                    <span class="font-weight-bold">{{ statistics_sum.tasks }}</span>
+                </p>
+            </div>
+            <div class="card-body p-3">
+                <div class="chart">
+                    <canvas id="chart-line2" class="chart-canvas" height="300"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 mb-4">
+        <div class="card z-index-2">
+            <div class="card-header pb-0">
+                <h6>Your ratings: last 7 days</h6>
+                <p class="text-sm">
+                    <i class="fa fa-star text-success"></i>
+                    <span class="font-weight-bold">{{ statistics_sum.ratings }}</span>
+                </p>
+            </div>
+            <div class="card-body p-3">
+                <div class="chart">
+                    <canvas id="chart-line3" class="chart-canvas" height="300"></canvas>
+                </div>
             </div>
         </div>
     </div>
@@ -391,6 +443,256 @@
         submitModal.show();
       }
 
+    });
+</script>
+
+<script src="{% static 'softTheme/js/plugins/chartjs.min.js' %}"></script>
+<script>
+    //console.log('{{ statistics | escapejs }}');
+    var statistics = JSON.parse('{{ statistics_json | escapejs }}');
+
+    var ctx1 = document.getElementById("chart-line1").getContext("2d");
+    var ctx2 = document.getElementById("chart-line2").getContext("2d");
+    var ctx3 = document.getElementById("chart-line3").getContext("2d");
+
+    var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
+    gradientStroke1.addColorStop(1, 'rgba(203,12,159,0.2)');
+    gradientStroke1.addColorStop(0.2, 'rgba(72,72,176,0.0)');
+    gradientStroke1.addColorStop(0, 'rgba(203,12,159,0)'); //purple colors
+
+    var gradientStroke2 = ctx2.createLinearGradient(0, 230, 0, 50);
+    gradientStroke2.addColorStop(1, 'rgba(87,95,154,0.2)');
+    gradientStroke2.addColorStop(0.2, 'rgba(108,112,154,0.0)');
+    gradientStroke2.addColorStop(0, 'rgba(133,135,154,0)'); //blue colors
+
+    var gradientStroke3 = ctx3.createLinearGradient(0, 230, 0, 50);
+    gradientStroke3.addColorStop(1, 'rgba(255,136,0,0.2)');
+    gradientStroke3.addColorStop(0.2, 'rgba(255,193,121,0.0)');
+    gradientStroke3.addColorStop(0, 'rgba(255,221,182,0)'); //orange colors
+
+    new Chart(ctx1, {
+      type: "line",
+      data: {
+        labels: statistics['label'],
+        datasets: [{
+            label: "Work hours",
+            tension: 0.4,
+            borderWidth: 0,
+            pointRadius: 0,
+            borderColor: "#cb0c9f",
+            borderWidth: 3,
+            backgroundColor: gradientStroke1,
+            fill: true,
+            data: statistics['workHours'],
+            maxBarThickness: 6
+          },
+        ],
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            display: false,
+          }
+        },
+        interaction: {
+          intersect: false,
+          mode: 'index',
+        },
+        scales: {
+          y: {
+            grid: {
+              drawBorder: false,
+              display: true,
+              drawOnChartArea: true,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              padding: 10,
+              color: '#b2b9bf',
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+          x: {
+            grid: {
+              drawBorder: false,
+              display: false,
+              drawOnChartArea: false,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              color: '#b2b9bf',
+              padding: 20,
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+        },
+      },
+    });
+    new Chart(ctx2, {
+      type: "line",
+      data: {
+        labels: statistics['label'],
+        datasets: [
+          {
+            label: "Tasks",
+            tension: 0.4,
+            borderWidth: 0,
+            pointRadius: 0,
+            borderColor: "#575f9a",
+            borderWidth: 3,
+            backgroundColor: gradientStroke2,
+            fill: true,
+            data: statistics['tasks'],
+            maxBarThickness: 6
+          },
+        ],
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            display: false,
+          }
+        },
+        interaction: {
+          intersect: false,
+          mode: 'index',
+        },
+        scales: {
+          y: {
+            grid: {
+              drawBorder: false,
+              display: true,
+              drawOnChartArea: true,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              padding: 10,
+              color: '#b2b9bf',
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+          x: {
+            grid: {
+              drawBorder: false,
+              display: false,
+              drawOnChartArea: false,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              color: '#b2b9bf',
+              padding: 20,
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+        },
+      },
+    });
+    new Chart(ctx3, {
+      type: "line",
+      data: {
+        labels: statistics['label'],
+        datasets: [
+          {
+            label: "Ratings",
+            tension: 0.4,
+            borderWidth: 0,
+            pointRadius: 0,
+            borderColor: "orange",
+            borderWidth: 3,
+            backgroundColor: gradientStroke3,
+            fill: true,
+            data: statistics['ratings'],
+            maxBarThickness: 6
+          },
+        ],
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            display: false,
+          }
+        },
+        interaction: {
+          intersect: false,
+          mode: 'index',
+        },
+        scales: {
+          y: {
+            grid: {
+              drawBorder: false,
+              display: true,
+              drawOnChartArea: true,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              padding: 10,
+              color: '#b2b9bf',
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+          x: {
+            grid: {
+              drawBorder: false,
+              display: false,
+              drawOnChartArea: false,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              color: '#b2b9bf',
+              padding: 20,
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+        },
+      },
     });
 </script>
 
